--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opensearch-project/oui",
-  "description": "OpenSearch UI Component Library",
+  "description": "openred UI Component Library",
   "version": "2.0.0",
   "license": "Apache-2.0",
   "main": "lib",
