--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@opensearch-project/oui",
+  "name": "@openred-security/oui",
   "description": "openred UI Component Library",
-  "version": "2.0.0",
+  "version": "1.0.0",
   "license": "Apache-2.0",
   "main": "lib",
   "module": "es",
@@ -41,7 +41,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/opensearch-project/oui.git"
+    "url": "https://github.com//oui.git"
   },
   "resolutions": {
     "**/semver": "^7.5.3",
