--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -23,8 +23,8 @@ jobs:
           secret: ${{ github.TOKEN }}
           approvers: ${{ steps.get_data.outputs.approvers }}
           minimum-approvals: 2
-          issue-title: 'Release OUI: ${{ steps.get_data.outputs.version }}'
-          issue-body: "Please approve or deny the release of OUI. **VERSION**: ${{ steps.get_data.outputs.version }} **TAG**: ${{ github.ref_name }}  **COMMIT**: ${{ github.sha }}"
+          issue-title: 'Release ORUI: ${{ steps.get_data.outputs.version }}'
+          issue-body: "Please approve or deny the release of ORUI. **VERSION**: ${{ steps.get_data.outputs.version }} **TAG**: ${{ github.ref_name }}  **COMMIT**: ${{ github.sha }}"
           exclude-workflow-initiator-as-approver: true
       - name: Setup Node
         uses: actions/setup-node@v3
