--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -21,7 +21,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest]
+        os: [self-hosted]
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -47,7 +47,7 @@ jobs:
 
   build:
     name: Build on ubuntu-latest
-    runs-on: [self-hosted, ubuntu-latest]
+    runs-on: [self-hosted]
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -79,7 +79,7 @@ jobs:
 
   build-docs:
     name: Build Docs on ubuntu-latest
-    runs-on: [self-hosted, ubuntu-latest]
+    runs-on: [self-hosted]
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -108,7 +108,7 @@ jobs:
 
   osd-unit:
     name: OSD Jest test (ciGroup${{ matrix.group }})
-    runs-on: [self-hosted, ubuntu-latest]
+    runs-on: [self-hosted]
     needs: build
     strategy:
       fail-fast: false
@@ -158,7 +158,7 @@ jobs:
 
   osd-integration:
     name: OSD Integration test
-    runs-on: [self-hosted, ubuntu-latest]
+    runs-on: [self-hosted]
     needs: build
     steps:
       - name: Checkout
@@ -207,12 +207,12 @@ jobs:
     strategy:
       matrix:
         include:
-          - os: [self-hosted, ubuntu-latest]
+          - os: [self-hosted]
             name: Linux x64
             ext: tar.gz
             suffix: linux-x64
             script: build-platform --linux --skip-os-packages
-          - os: [self-hosted, ubuntu-latest, ARM64]
+          - os: [self-hosted, ARM64]
             name: Linux ARM64
             ext: tar.gz
             suffix: linux-arm64
