--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -21,7 +21,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [self-hosted]
+        os: [ubuntu-latest]
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -46,7 +46,7 @@ jobs:
 
   build:
     name: Build on ubuntu-latest
-    runs-on: [self-hosted]
+    runs-on: [ubuntu-latest]
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -78,7 +78,7 @@ jobs:
 
   build-docs:
     name: Build Docs on ubuntu-latest
-    runs-on: [self-hosted]
+    runs-on: [ubuntu-latest]
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -106,7 +106,7 @@ jobs:
 
   osd-unit:
     name: OSD Jest test (ciGroup${{ matrix.group }})
-    runs-on: [self-hosted]
+    runs-on: [ubuntu-latest]
     needs: build
     strategy:
       fail-fast: false
@@ -156,7 +156,7 @@ jobs:
 
   osd-integration:
     name: OSD Integration test
-    runs-on: [self-hosted]
+    runs-on: [ubuntu-latest]
     needs: build
     steps:
       - name: Checkout
@@ -205,12 +205,12 @@ jobs:
     strategy:
       matrix:
         include:
-          - os: [self-hosted]
+          - os: [ubuntu-latest]
             name: Linux x64
             ext: tar.gz
             suffix: linux-x64
             script: build-platform --linux --skip-os-packages
-          - os: [self-hosted, ARM64]
+          - os: [ubuntu-latest, ARM64]
             name: Linux ARM64
             ext: tar.gz
             suffix: linux-arm64
