--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -21,7 +21,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest]
+        os: [ubuntu-latest, windows-latest]
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -31,6 +31,7 @@ jobs:
         with:
           node-version-file: '.nvmrc'
           registry-url: 'https://registry.npmjs.org'
+          cache: 'yarn'
 
       - name: Setup Yarn
         run: |
@@ -46,7 +47,7 @@ jobs:
 
   build:
     name: Build on ubuntu-latest
-    runs-on: [ubuntu-latest]
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -56,6 +57,7 @@ jobs:
         with:
           node-version-file: '.nvmrc'
           registry-url: 'https://registry.npmjs.org'
+          cache: 'yarn'
 
       - name: Setup Yarn
         run: |
@@ -77,7 +79,7 @@ jobs:
 
   build-docs:
     name: Build Docs on ubuntu-latest
-    runs-on: [ubuntu-latest]
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -87,6 +89,7 @@ jobs:
         with:
           node-version-file: '.nvmrc'
           registry-url: 'https://registry.npmjs.org'
+          cache: 'yarn'
 
       - name: Setup Yarn
         run: |
@@ -105,7 +108,7 @@ jobs:
 
   osd-unit:
     name: OSD Jest test (ciGroup${{ matrix.group }})
-    runs-on: [ubuntu-latest]
+    runs-on: ubuntu-latest
     needs: build
     strategy:
       fail-fast: false
@@ -115,7 +118,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          repository: openred-security/openred-console
+          repository: opensearch-project/OpenSearch-Dashboards
 
       - name: Setup Node
         uses: actions/setup-node@v3
@@ -155,13 +158,13 @@ jobs:
 
   osd-integration:
     name: OSD Integration test
-    runs-on: [ubuntu-latest]
+    runs-on: ubuntu-latest
     needs: build
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          repository: openred-security/openred-console
+          repository: opensearch-project/OpenSearch-Dashboards
 
       - name: Setup Node
         uses: actions/setup-node@v3
@@ -204,12 +207,12 @@ jobs:
     strategy:
       matrix:
         include:
-          - os: [ubuntu-latest]
+          - os: ubuntu-latest
             name: Linux x64
             ext: tar.gz
             suffix: linux-x64
             script: build-platform --linux --skip-os-packages
-          - os: [ubuntu-latest, ARM64]
+          - os: ubuntu-latest
             name: Linux ARM64
             ext: tar.gz
             suffix: linux-arm64
@@ -220,7 +223,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
         with:
-          repository: openred-security/openred-console
+          repository: opensearch-project/OpenSearch-Dashboards
 
       - name: Setup Node
         uses: actions/setup-node@v3
