--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@openred-security/orui",
+  "name": "@openred-security/oui",
   "description": "openred UI Component Library",
   "version": "1.0.0",
   "license": "Apache-2.0",
@@ -41,7 +41,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/openred-security/orui.git"
+    "url": "https://github.com//oui.git"
   },
   "resolutions": {
     "**/semver": "^7.5.3",
