--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -200,12 +200,12 @@ jobs:
     strategy:
       matrix:
         include:
-          - os: [ubuntu-latest]
+          - os: ubuntu-latest
             name: Linux x64
             ext: tar.gz
             suffix: linux-x64
             script: build-platform --linux --skip-os-packages
-          - os: [ubuntu-latest, ARM64]
+          - os: ubuntu-latest
             name: Linux ARM64
             ext: tar.gz
             suffix: linux-arm64
