--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -23,8 +23,8 @@ jobs:
           secret: ${{ github.TOKEN }}
           approvers: ${{ steps.get_data.outputs.approvers }}
           minimum-approvals: 2
-          issue-title: 'Release OUI: ${{ steps.get_data.outputs.version }}'
-          issue-body: "Please approve or deny the release of OUI. **VERSION**: ${{ steps.get_data.outputs.version }} **TAG**: ${{ github.ref_name }}  **COMMIT**: ${{ github.sha }}"
+          issue-title: 'Release ORUI: ${{ steps.get_data.outputs.version }}'
+          issue-body: "Please approve or deny the release of ORUI. **VERSION**: ${{ steps.get_data.outputs.version }} **TAG**: ${{ github.ref_name }}  **COMMIT**: ${{ github.sha }}"
           exclude-workflow-initiator-as-approver: true
       - name: Setup Node
         uses: actions/setup-node@v3
@@ -39,9 +39,12 @@ jobs:
       - name: Generate build
         run: |
           yarn build
-          yarn pack --filename oui.tar.gz
-          mkdir oui && mv oui.tar.gz oui/oui.tar.gz
-          tar -cvf artifacts.tar.gz oui
+          yarn pack --filename orui.tar.gz
+          mkdir orui && mv orui.tar.gz orui/orui.tar.gz
+          tar -cvf artifacts.tar.gz orui
+      - run: npm publish --provenance --access public
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
