--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -9,6 +9,7 @@ jobs:
   draft_release:
     runs-on: ubuntu-latest
     permissions:
+      id-token: write
       contents: write
       issues: write
     steps:
