--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/openred-security/orui.git"
+    "url": "https://github.com/openred-security/openred-orui"
   },
   "resolutions": {
     "**/semver": "^7.5.3",
